Remove unnecessary blank lines in templates
The Bash and Ansible remediation generated by the file_owner and
file_groupowner templates were including many unnecessary blank lines at
the beginning of the resulted remediations due to the way the jinja2
lines were declared. It was fixed to remove the unnecessary spaces at
the beginning.

--- a/shared/templates/file_groupowner/ansible.template
+++ b/shared/templates/file_groupowner/ansible.template
@@ -4,14 +4,14 @@
 # complexity = low
 # disruption = low
 
-{{% for path in FILEPATH %}}
-{{% if IS_DIRECTORY %}}
-{{% if FILE_REGEX %}}
+{{%- for path in FILEPATH %}}
+{{%- if IS_DIRECTORY %}}
+{{%- if FILE_REGEX %}}
 
 {{%- if RECURSIVE %}}
-{{% set FIND_RECURSE_ARGS="" %}}
+{{%- set FIND_RECURSE_ARGS="" %}}
 {{%- else %}}
-{{% set FIND_RECURSE_ARGS="-maxdepth 1" %}}
+{{%- set FIND_RECURSE_ARGS="-maxdepth 1" %}}
 {{%- endif %}}
 
 - name: Find {{{ path }}} file(s) matching {{{ FILE_REGEX[loop.index0] }}}{{% if RECURSIVE %}} recursively{{% endif %}}
