--- a/shared/templates/file_groupowner/bash.template
+++ b/shared/templates/file_groupowner/bash.template
@@ -5,19 +5,20 @@
 # disruption = low
 
 {{%- if RECURSIVE %}}
-{{% set FIND_RECURSE_ARGS="" %}}
+{{%- set FIND_RECURSE_ARGS="" %}}
 {{%- else %}}
-{{% set FIND_RECURSE_ARGS="-maxdepth 1" %}}
+{{%- set FIND_RECURSE_ARGS="-maxdepth 1" %}}
 {{%- endif %}}
 
-{{% for path in FILEPATH %}}
+{{%- for path in FILEPATH %}}
 {{%- if IS_DIRECTORY %}}
 {{%- if FILE_REGEX %}}
+
 find {{{ path }}} {{{ FIND_RECURSE_ARGS }}} -type f ! -gid {{{ FILEGID }}} -regex '{{{ FILE_REGEX[loop.index0] }}}' -exec chgrp {{{ FILEGID }}} {} \;
-{{% else %}}
+{{%- else %}}
 find -H {{{ path }}} {{{ FIND_RECURSE_ARGS }}} -type d -exec chgrp {{{ FILEGID }}} {} \;
 {{%- endif %}}
 {{%- else %}}
 chgrp {{{ FILEGID }}} {{{ path }}}
 {{%- endif %}}
-{{% endfor %}}
+{{%- endfor %}}
