Update CIS control files for RHEL
The requirement 5.3.2 for RHEL7 and 5.2.2 for RHEL8 and RHEL9 were
updated to automated after the inclusion of new rules related to owner
and group-owner of ssh private keys.

--- a/controls/cis_rhel7.yml
+++ b/controls/cis_rhel7.yml
@@ -1763,7 +1763,11 @@ controls:
     levels:
     - l1_server
     - l1_workstation
-    automated: no # rule missing (we have similar)
+    status: automated
+    rules:
+      - file_permissions_sshd_private_key
+      - file_ownership_sshd_private_key
+      - file_groupownership_sshd_private_key
 
   - id: 5.3.3
     title: Ensure permissions on SSH public host key files are configured (Automated)
