Update CIS control files for RHEL
The requirement 5.3.3 for RHEL7 and 5.2.3 for RHEL8 and RHEL9 were
updated to automated after the inclusion of new rules related to owner
and group-owner of ssh public keys.

--- a/controls/cis_rhel7.yml
+++ b/controls/cis_rhel7.yml
@@ -1774,9 +1774,11 @@ controls:
     levels:
     - l1_server
     - l1_workstation
-    status: partial # missing rules for ownership
+    status: automated
     rules:
     - file_permissions_sshd_pub_key
+    - file_ownership_sshd_pub_key
+    - file_groupownership_sshd_pub_key
 
   - id: 5.3.4
     title: Ensure SSH access is limited (Automated)
