--- a/controls/cis_rhel9.yml
+++ b/controls/cis_rhel9.yml
@@ -1800,9 +1800,6 @@ controls:
       - file_owner_sshd_config
       - file_permissions_sshd_config
 
-  # NEEDS RULE
-  # Missing rules for owner and group-owner.
-  # https://github.com/ComplianceAsCode/content/issues/7334
   - id: 5.2.2
     title: Ensure permissions on SSH private host key files are configured (Automated)
     levels:
@@ -1814,16 +1811,16 @@ controls:
       - file_ownership_sshd_private_key
       - file_groupownership_sshd_private_key
 
-  # TODO
-  # Missing rules for owner and group-owner.
   - id: 5.2.3
     title: Ensure permissions on SSH public host key files are configured (Automated)
     levels:
       - l1_server
       - l1_workstation
-    status: partial
+    status: automated
     rules:
       - file_permissions_sshd_pub_key
+      - file_ownership_sshd_pub_key
+      - file_groupownership_sshd_pub_key
 
   - id: 5.2.4
     title: Ensure SSH access is limited (Automated)
