--- a/controls/srg_ctr/SRG-APP-000065-CTR-000115.yml
+++ b/controls/srg_ctr/SRG-APP-000065-CTR-000115.yml
@@ -4,13 +4,9 @@ controls:
   - medium
   title: {{{ full_name }}} must enforce the limit of three consecutive invalid
     logon attempts by a user during a 15-minute time period.
-  related_rules:
+  rules:
   - idp_is_configured
   - ocp_idp_no_htpasswd
   - kubeadmin_removed
-  status: not applicable
-  status_justification: |-
-    Not Applicable. Applicable to Identity Management Provider and not
-    OCP. Only configurable check is to ensure OCP is configured for an
-    IDP under SRG-APP-000023-CTR-000055. Verify with IdM service provider
-    admins that the IdM meets the requirements.
+  - ocp_no_ldap_insecure
+  status: automated
