--- a/controls/srg_ctr/SRG-APP-000156-CTR-000380.yml
+++ b/controls/srg_ctr/SRG-APP-000156-CTR-000380.yml
@@ -5,8 +5,8 @@ controls:
   title: {{{ full_name }}} must use FIPS-validated SHA-1 or higher hash function
     to provide replay-resistant authentication mechanisms for network access to privileged
     accounts.
-  related_rules:
-  - idp_is_configured
+  rules:
   - ocp_idp_no_htpasswd
+  - idp_is_configured
   - kubeadmin_removed
   status: automated
