--- a/controls/srg_ctr/SRG-APP-000174-CTR-000450.yml
+++ b/controls/srg_ctr/SRG-APP-000174-CTR-000450.yml
@@ -3,13 +3,8 @@ controls:
   levels:
   - medium
   title: {{{ full_name }}} must enforce a 60-day maximum password lifetime restriction.
-  status: not applicable
-  related_rules:
-  - idp_is_configured
+  rules:
   - ocp_idp_no_htpasswd
+  - idp_is_configured
   - kubeadmin_removed
-  status_justification: |-
-    Not Applicable. Applicable to Identity Management Provider and not
-    OCP. Only configurable check is to ensure OCP is configured for an
-    IDP under SRG-APP-000023-CTR-000055. Verify with IdM service provider
-    admins that the IdM meets the requirements.
+  status: automated
