--- a/controls/srg_ctr/SRG-APP-000177-CTR-000465.yml
+++ b/controls/srg_ctr/SRG-APP-000177-CTR-000465.yml
@@ -5,12 +5,8 @@ controls:
   title: {{{ full_name }}} must map the authenticated identity to the individual
     user or group account for PKI-based authentication.
   status: not applicable
-  related_rules:
-  - idp_is_configured
+  rules:
   - ocp_idp_no_htpasswd
+  - idp_is_configured
   - kubeadmin_removed
-  status_justification: |-
-    Not Applicable. Applicable to Identity Management Provider and not
-    OCP. Only configurable check is to ensure OCP is configured for an
-    IDP under SRG-APP-000023-CTR-000055. Verify with IdM service provider
-    admins that the IdM meets the requirements.
+  status: automated
