--- a/controls/srg_ctr/SRG-APP-000318-CTR-000740.yml
+++ b/controls/srg_ctr/SRG-APP-000318-CTR-000740.yml
@@ -4,9 +4,8 @@ controls:
   - medium
   title: {{{ full_name }}} must enforce organization-defined circumstances and/or
     usage conditions for organization-defined accounts.
-  status: not applicable
-  status_justification: |-
-    Not Applicable. Applicable to Identity Management Provider and not
-    OCP. Only configurable check is to ensure OCP is configured for an
-    IDP under SRG-APP-000023-CTR-000055. Verify with IdM service provider
-    admins that the IdM meets the requirements.
+  rules:
+  - ocp_idp_no_htpasswd
+  - idp_is_configured
+  - kubeadmin_removed
+  status: automated
