--- a/controls/srg_ctr/SRG-APP-000345-CTR-000785.yml
+++ b/controls/srg_ctr/SRG-APP-000345-CTR-000785.yml
@@ -5,13 +5,8 @@ controls:
   title: {{{ full_name }}} must automatically lock an account until the locked
     account is released by an administrator when three unsuccessful login attempts
     in 15 minutes are exceeded.
-  related_rules:
-  - idp_is_configured
+  rules:
   - ocp_idp_no_htpasswd
+  - idp_is_configured
   - kubeadmin_removed
-  status: not applicable
-  status_justification: |-
-    Not Applicable. Applicable to Identity Management Provider and not
-    OCP. Only configurable check is to ensure OCP is configured for an
-    IDP under SRG-APP-000023-CTR-000055. Verify with IdM service provider
-    admins that the IdM meets the requirements.
+  status: automated
