--- a/controls/srg_ctr/SRG-APP-000397-CTR-000955.yml
+++ b/controls/srg_ctr/SRG-APP-000397-CTR-000955.yml
@@ -4,13 +4,8 @@ controls:
   - medium
   title: {{{ full_name }}} must allow the use of a temporary password for system
     logons with an immediate change to a permanent password.
-  status: not applicable
-  related_rules:
-  - idp_is_configured
+  rules:
   - ocp_idp_no_htpasswd
+  - idp_is_configured
   - kubeadmin_removed
-  status_justification: |-
-    Not Applicable. Applicable to Identity Management Provider and not
-    OCP. Only configurable check is to ensure OCP is configured for an
-    IDP under SRG-APP-000023-CTR-000055. Verify with IdM service provider
-    admins that the IdM meets the requirements.
+  status: automated
