--- a/controls/srg_ctr/SRG-APP-000401-CTR-000965.yml
+++ b/controls/srg_ctr/SRG-APP-000401-CTR-000965.yml
@@ -5,13 +5,8 @@ controls:
   title: {{{ full_name }}}, for PKI-based authentication, must implement a local
     cache of revocation data to support path discovery and validation in case of the
     inability to access revocation information via the network.
-  related_rules:
-  - idp_is_configured
+  rules:
   - ocp_idp_no_htpasswd
+  - idp_is_configured
   - kubeadmin_removed
-  status: not applicable
-  status_justification: |-
-    Not Applicable. Applicable to Identity Management Provider and not
-    OCP. Only configurable check is to ensure OCP is configured for an
-    IDP under SRG-APP-000023-CTR-000055. Verify with IdM service provider
-    admins that the IdM meets the requirements.
+  status: automated
