OCP4 STIG: Several RBAC related controls are no longer Inherently Met, let's use a manual rule to cut duplication
This patch reflects the changes to the OCP4 STIG draft. Several rules
that used to be marked as Inherently Met with justification pointing to
RBAC are now applicable/configurable with a manual rule that asks for
the RBAC rules to be reviewed.

In order to cut down on duplication and provide the same rendered
spreadsheet output as DISA expects, I also implemented a manual rule
that covers the requirement and its text can be resued.

--- a/controls/srg_ctr/SRG-APP-000033-CTR-000090.yml
+++ b/controls/srg_ctr/SRG-APP-000033-CTR-000090.yml
@@ -4,19 +4,6 @@ controls:
   - medium
   title: Least privilege access and need to know must be required to access the container
     platform registry.
-  status: inherently met
-  status_justification: |-
-    The OpenShift Container Platform provides RBAC policies and
-    enforcement of those policies out of the box.  Verification of
-    SRG-APP-000340-CTR-000770 will ensure that binding of user and groups
-    to roles provides proper restriction of access to resources. For more
-    information on how RBAC policies work in OpenShift, refer to
-    https://docs.openshift.com/container-platform/latest/authentication/using-rbac.html
-
-    The internal OpenShift registry is protected by the platform's RBAC
-    policies. Users requiring access to the registry must be granted the
-    role registry-viewer or registry-editor to access the internal registry.
-  artifact_description: |-
-    Supporting evidence is in the following documentation
-    https://docs.openshift.com/container-platform/latest/registry/accessing-the-registry.html
-    https://docs.openshift.com/container-platform/latest/post_installation_configuration/preparing-for-users.html#post-install-using-rbac-to-define-and-apply-permissions
+  status: manual
+  rules:
+  - rbac_least_privilege
