--- a/controls/srg_ctr/SRG-APP-000133-CTR-000310.yml
+++ b/controls/srg_ctr/SRG-APP-000133-CTR-000310.yml
@@ -3,14 +3,6 @@ controls:
   levels:
   - medium
   title: Authentication files for the container platform must be protected.
-  status: inherently met
-  artifact_description: |-
-    Supporting evidence is in the following documentation
-
-    https://docs.openshift.com/container-platform/latest/post_installation_configuration/index.html
-    https://docs.openshift.com/container-platform/latest/authentication/using-rbac.html
-    https://docs.openshift.com/container-platform/latest/authentication/understanding-identity-provider.html
-  status_justification: |-
-    The OpenShift Container Platform provides RBAC policies and enforcement of those policies out of the box.  Verification of SRG-APP-000340-CTR-000770 will ensure that binding of user and groups to roles provides proper restriction of access to resources. For more information on how RBAC policies work in OpenShift.
-
-    Only users with cluster-admin privileges are permitted to create, modify, or view platform identity providers stored within the Oauth custom resource defining identity provider configuration(s).
+  status: manual
+  rules:
+  - rbac_least_privilege
