--- a/controls/srg_ctr/SRG-APP-000378-CTR-000880.yml
+++ b/controls/srg_ctr/SRG-APP-000378-CTR-000880.yml
@@ -4,4 +4,6 @@ controls:
   - medium
   title: {{{ full_name }}} must prohibit the installation of patches and updates
     without explicit privileged status.
-  status: inherently met
+  status: manual
+  rules:
+  - rbac_least_privilege
