--- a/controls/srg_ctr/SRG-APP-000033-CTR-000100.yml
+++ b/controls/srg_ctr/SRG-APP-000033-CTR-000100.yml
@@ -4,18 +4,6 @@ controls:
   - medium
   title: Least privilege access and need to know must be required to access the container
     platform keystore.
-  status: inherently met
-  status_justification: |-
-    The OpenShift Container Platform provides RBAC policies and
-    enforcement of those policies out of the box.  Verification of
-    SRG-APP-000340-CTR-000770 will ensure that binding of user and groups
-    to roles provides proper restriction of access to resources. For more
-    information on how RBAC policies work in OpenShift, refer to
-    https://docs.openshift.com/container-platform/latest/authentication/using-rbac.html
-
-    OpenShift Container Platform stores private keys and certs as Secret
-    objects within the platform. Access to those objects is enforced by
-    the platform's RBAC policies.
-  artifact_description: |-
-    Supporting evidence is in the following documentation
-    https://docs.openshift.com/container-platform/latest/authentication/index.html
+  status: manual
+  rules:
+  - rbac_least_privilege
