--- a/controls/srg_ctr/SRG-APP-000133-CTR-000305.yml
+++ b/controls/srg_ctr/SRG-APP-000133-CTR-000305.yml
@@ -3,13 +3,6 @@ controls:
   levels:
   - medium
   title: Configuration files for the container platform must be protected.
-  status: inherently met
-  artifact_description: |-
-    Supporting evidence is in the following documentation
-
-    https://docs.openshift.com/container-platform/latest/post_installation_configuration/index.html
-    https://docs.openshift.com/container-platform/latest/authentication/using-rbac.html
-  status_justification: |-
-    The OpenShift Container Platform provides RBAC policies and enforcement of those policies out of the box.  Verification of SRG-APP-000340-CTR-000770 will ensure that binding of user and groups to roles provides proper restriction of access to resources. For more information on how RBAC policies work in OpenShift.
-
-    Configuration of the platform is performed through Cluster configuration resources and cluster operators. This configuration is stored as object resources. Access to the cluster configuration resources and operator, and other cluster resources are enforced by the platform's RBAC policies.
+  status: manual
+  rules:
+  - rbac_least_privilege
