bugfix: rsyslog_remote_loghost: word_boundary is space or tab
Default word_boundary in bash_replace_or_append \> does not work with
*.* and like.

Replace regexp in all types to be the same. Avoid copy-paste in OVAL.

rsyslog.conf(5)
...
       Rules (selector + action)
              Every rule line consists of two fields, a selector field and an action field. These two fields are separated
              by one or more spaces or tabs. The selector field specifies a pattern of facilities and priorities belonging
              to the specified action.
...

--- a/linux_os/guide/system/logging/rsyslog_sending_messages/rsyslog_remote_loghost/ansible/shared.yml
+++ b/linux_os/guide/system/logging/rsyslog_sending_messages/rsyslog_remote_loghost/ansible/shared.yml
@@ -6,8 +6,9 @@
 {{{ ansible_instantiate_variables("rsyslog_remote_loghost_address") }}}
 
 - name: "Set rsyslog remote loghost"
-  lineinfile:
+  ansible.builtin.lineinfile:
     dest: /etc/rsyslog.conf
-    regexp: "^\\*\\.\\*"
+    regexp: >-
+      ^\*\.\*[ \\t]+(?:@|\:omrelp\:)
     line: "*.* @@{{ rsyslog_remote_loghost_address }}"
     create: yes
