Update CIS control file for RHEL8 and RHEL9
The "Ensure nftables default deny firewall policy (Automated)"
requirement status was updated to "supported". The benchmark mention
this requirement is valid if nftables is in use. RHEL products use
firewalld instead.

--- a/controls/cis_rhel9.yml
+++ b/controls/cis_rhel9.yml
@@ -1142,14 +1142,18 @@ controls:
       - l1_workstation
     status: manual
 
-  # NEEDS RULE
-  # https://github.com/ComplianceAsCode/content/issues/5248
   - id: 3.4.2.7
     title: Ensure nftables default deny firewall policy (Automated)
     levels:
       - l1_server
       - l1_workstation
-    status: pending
+    status: supported
+    notes: |-
+      RHEL systems use firewalld for firewall management. Although nftables is the default
+      back-end for firewalld, it is not recommended to use nftables directly when firewalld
+      is in use.
+    related_rules:
+      - nftables_ensure_default_deny_policy
 
   - id: 4.1.1.1
     title: Ensure auditd is installed (Automated)
