fix: sysctl/ansible: FQDN ansible.posix.sysctl not in 2.9
Newer ansible (mine 2.14) has sysctl at ansible.posix.sysctl.

But build system does not accept it:

	Found module which is not allowed:
	{'tags', 'name', 'when', 'ansible.posix.sysctl'}

and

	ERROR! couldn't resolve module/action 'ansible.posix.sysctl'. This often indicates a misspelling, missing collection, or incorrect module path.

--- a/shared/templates/sysctl/ansible.template
+++ b/shared/templates/sysctl/ansible.template
@@ -39,7 +39,7 @@
 - (xccdf-var sysctl_{{{ SYSCTLID }}}_value)
 
 - name: Ensure sysctl {{{ SYSCTLVAR }}} is set
-  ansible.posix.sysctl:
+  sysctl:
     name: "{{{ SYSCTLVAR }}}"
     # Ansible sysctl module doesn't allow empty string. A space string is
     # allowed and has the same semantics as sysctl will ignore spaces.
@@ -49,7 +49,7 @@
 {{%- else %}}
 
 - name: Ensure sysctl {{{ SYSCTLVAR }}} is set to {{{ SYSCTLVAL }}}
-  ansible.posix.sysctl:
+  sysctl:
     name: "{{{ SYSCTLVAR }}}"
     # Ansible sysctl module doesn't allow empty string. A space string is
     # allowed and has the same semantics as sysctl will ignore spaces.
