fix: testing: use admin username
Because during remediation root used can be locked out from ssh.

--- a/tests/kickstarts/test_suite.cfg
+++ b/tests/kickstarts/test_suite.cfg
@@ -111,9 +111,21 @@ openssh-server
 # initialize guest agent for SSG Test Suite
 systemctl enable qemu-guest-agent.service
 
-mkdir -p /root/.ssh
-printf "%s\n" "&&HOST_PUBLIC_KEY&&" >> /root/.ssh/authorized_keys
-chmod og-rw /root/.ssh /root/.ssh/authorized_keys
+(
+    set -epux
+    umask 077
+    for a in /root /home/admin; do
+        mkdir -p "$a"/.ssh
+        printf "%s\n" "&&HOST_PUBLIC_KEY&&" >> "$a"/.ssh/authorized_keys
+    done
+    for a in admin; do
+        chown -R "$a": /home/"$a"/.ssh
+    done
+    # For now this survives sudo_remove_nopasswd
+    printf '# From kickstart
+admin ALL=(root) NOPASSWD: ALL
+' > /etc/sudoers.d/50_admin
+)
 systemctl enable sshd
 
 # This is needed to add entries about password change into /etc/shadow
