Some SLE 12/15 fixes related to the rule accounts_passwords_pam_tally2

--- a/controls/pcidss_3.yml
+++ b/controls/pcidss_3.yml
@@ -1312,6 +1312,7 @@ controls:
     status: automated
     rules:
       - accounts_passwords_pam_faillock_deny
+      - var_password_pam_tally2=3
       - accounts_passwords_pam_tally2
 
   - id: Req-8.1.7
