--- a/controls/pcidss_4.yml
+++ b/controls/pcidss_4.yml
@@ -1547,6 +1547,7 @@ controls:
       status: automated
       rules:
         - accounts_passwords_pam_faillock_deny
+        - var_password_pam_tally2=3
         - accounts_passwords_pam_tally2
         - accounts_passwords_pam_faillock_unlock_time
         - accounts_passwords_pam_tally2_unlock_time
