--- a/controls/anssi.yml
+++ b/controls/anssi.yml
@@ -762,6 +762,8 @@ controls:
     - accounts_passwords_pam_faillock_deny_root
     # same as above but for pam_tally2 module
     - accounts_passwords_pam_tally2_deny_root
+    - var_password_pam_tally2=5
+    - accounts_passwords_pam_tally2  
     # Automatically unlock users after 15 min to prevent DoS
     - var_accounts_passwords_pam_faillock_unlock_time=900
     - accounts_passwords_pam_faillock_unlock_time
