Fixes in SLE 12/15 rule accounts_passwords_pam_tally2_deny_root

--- a/controls/cis_sle12.yml
+++ b/controls/cis_sle12.yml
@@ -1770,6 +1770,7 @@ controls:
     rules:
       - accounts_passwords_pam_tally2
       - var_password_pam_tally2=5
+      - accounts_passwords_pam_tally2_deny_root
 
   - id: 5.3.3
     title: Ensure password reuse is limited (Automated)
