Remove use of mstksg/get-package in actions
It uses NodeJS 12 which is outdated and will be removed soon.
It is easy to move to use apt-get.
This update does what the action was doing anyways.

--- a/.github/workflows/automatus-cs8.yaml
+++ b/.github/workflows/automatus-cs8.yaml
@@ -66,9 +66,7 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - name: Install Deps
-        uses: mstksg/get-package@master
-        with:
-          apt-get: cmake ninja-build libopenscap8 libxml2-utils xsltproc python3-jinja2 python3-yaml ansible-lint podman
+        run: sudo apt-get update && sudo apt-get install cmake ninja-build libopenscap8 libxml2-utils xsltproc python3-jinja2 python3-yaml ansible-lint podman
       - name: Checkout
         uses: actions/checkout@v3
       - name: Get cached CTF output
