Fix in SLE 12/15 rule accounts_passwords_pam_tally2_unlock_time

--- a/controls/cis_sle12.yml
+++ b/controls/cis_sle12.yml
@@ -1774,6 +1774,8 @@ controls:
       - accounts_passwords_pam_tally2
       - var_password_pam_tally2=5
       - accounts_passwords_pam_tally2_deny_root
+      - accounts_passwords_pam_tally2_unlock_time
+      - var_accounts_passwords_pam_tally2_unlock_time=1800
 
   - id: 5.3.3
     title: Ensure password reuse is limited (Automated)
