--- a/controls/anssi.yml
+++ b/controls/anssi.yml
@@ -764,6 +764,8 @@ controls:
     - accounts_passwords_pam_tally2_deny_root
     - var_password_pam_tally2=5
     - accounts_passwords_pam_tally2  
+    - accounts_passwords_pam_tally2_unlock_time
+    - var_accounts_passwords_pam_tally2_unlock_time=1800
     # Automatically unlock users after 15 min to prevent DoS
     - var_accounts_passwords_pam_faillock_unlock_time=900
     - accounts_passwords_pam_faillock_unlock_time
