Include aide_check_audit_tools rule in CIS for RHEL9
The aide_check_audit_tools rule satisfies the 1.3.3 CIS requirement for
RHEL 9.

--- a/controls/cis_rhel9.yml
+++ b/controls/cis_rhel9.yml
@@ -355,7 +355,9 @@ controls:
     levels:
       - l1_server
       - l1_workstation
-    status: planned
+    status: automated
+    rules:
+      - aide_check_audit_tools
     related_rules:
       - aide_use_fips_hashes
 
