--- a/linux_os/guide/system/software/integrity/software-integrity/aide/aide_check_audit_tools/rule.yml
+++ b/linux_os/guide/system/software/integrity/software-integrity/aide/aide_check_audit_tools/rule.yml
@@ -38,6 +38,7 @@ identifiers:
 
 references:
     cis@alinux3: 4.1.4.11
+    cis@rhel9: 1.3.3
     cis@ubuntu2204: 4.1.4.11
     disa: CCI-001496
     nist: AU-9(3),AU-9(3).1
