--- a/controls/anssi.yml
+++ b/controls/anssi.yml
@@ -733,20 +733,25 @@ controls:
     # Ensure passwords with minimum of 18 characters
     - var_password_pam_minlen=18
     - accounts_password_pam_minlen
+    - cracklib_accounts_password_pam_minlen
     # Enforce password lenght for new accounts
     - var_accounts_password_minlen_login_defs=18
     - accounts_password_minlen_login_defs
     # Require at Least 1 Special Character in Password
     - var_password_pam_ocredit=1
     - accounts_password_pam_ocredit
+    - cracklib_accounts_password_pam_ocredit
     # Require at Least 1 Numeric Character in Password
     - var_password_pam_dcredit=1
+    - cracklib_accounts_password_pam_dcredit
     - accounts_password_pam_dcredit
     # Require at Least 1 Uppercase Character in Password
     - var_password_pam_ucredit=1
     - accounts_password_pam_ucredit
+    - cracklib_accounts_password_pam_ucredit
     # Require at Least 1 Lowercase Character in Password
     - var_password_pam_lcredit=1
+    - cracklib_accounts_password_pam_lcredit
     - accounts_password_pam_lcredit
 
     # Lock out users after 3 failed authentication attempts within 15 min
