--- a/linux_os/guide/system/auditing/auditd_configure_rules/audit_privileged_commands/audit_rules_privileged_commands_kmod/ansible/sle12.yml
+++ b/linux_os/guide/system/auditing/auditd_configure_rules/audit_privileged_commands/audit_rules_privileged_commands_kmod/ansible/sle12.yml
@@ -7,10 +7,19 @@
 - name: Service facts
   service_facts:
 
-- name: Check the rules script being used
-  command:
-    grep '^ExecStartPost' /usr/lib/systemd/system/auditd.service
-  register: check_rules_scripts_result
+- name: Check if auditctl rules script being used
+  ansible.builtin.find:
+    paths: '/usr/lib/systemd/system/'
+    patterns: 'auditd.service'
+    contains: '^\s*ExecStartPost\s*=[\s\-]*[\w\/]*auditctl'
+  register: auditd_svc_auditctl_used
+
+- name: Check augenrules rules script being used
+  ansible.builtin.find:
+    paths: '/usr/lib/systemd/system/'
+    patterns: 'auditd.service'
+    contains: '^\s*ExecStartPost\s*=[\s\-]*[\w\/]*augenrules'
+  register: auditd_svc_augen_used
 
 - name: Update kmod in /etc/audit/rules.d/audit.rules
   lineinfile:
@@ -19,7 +28,7 @@
     create: yes
   when:
     - '"auditd.service" in ansible_facts.services'
-    - '"augenrules" in check_rules_scripts_result.stdout'
+    - auditd_svc_augen_used is defined and auditd_svc_augen_used.matched >= 1
   register: augenrules_audit_rules_kmod_update_result
 
 - name: Update kmod in /etc/audit/audit.rules
@@ -29,7 +38,7 @@
     create: yes
   when:
     - '"auditd.service" in ansible_facts.services'
-    - '"auditctl" in check_rules_scripts_result.stdout'
+    - auditd_svc_auditctl_used is defined and auditd_svc_auditctl_used.matched >= 1
   register: auditctl_audit_rules_kmod_update_result
 
 - name: Restart auditd.service
