Add platform to nftables rules

--- a/linux_os/guide/system/network/network-nftables/set_nftables_table/rule.yml
+++ b/linux_os/guide/system/network/network-nftables/set_nftables_table/rule.yml
@@ -15,6 +15,8 @@ rationale: |-
 
 severity: medium
 
+platform: package[nftables]
+
 identifiers:
     cce@rhel7: CCE-86161-7
     cce@rhel8: CCE-86162-5
