--- a/linux_os/guide/system/network/network-nftables/service_nftables_enabled/rule.yml
+++ b/linux_os/guide/system/network/network-nftables/service_nftables_enabled/rule.yml
@@ -16,6 +16,8 @@ rationale: |-
 
 severity: medium
 
+platform: package[nftables]
+
 identifiers:
     cce@rhel7: CCE-86723-4
     cce@rhel8: CCE-86725-9
