nftables_rules_permanent: Add Ubuntu prodtypes and cis references

--- a/linux_os/guide/system/network/network-nftables/nftables_rules_permanent/rule.yml
+++ b/linux_os/guide/system/network/network-nftables/nftables_rules_permanent/rule.yml
@@ -1,6 +1,6 @@
 documentation_complete: true
 
-prodtype: sle15
+prodtype: sle15,ubuntu2004,ubuntu2204
 
 title: 'Ensure nftables Rules are Permanent'
 
@@ -22,6 +22,8 @@ identifiers:
 
 references:
     cis@sle15: 3.5.2.10
+    cis@ubuntu2004: 3.5.2.10
+    cis@ubuntu2204: 3.5.2.10
 
 ocil_clause: 'no nftables configuration exist'
 
