--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -28,6 +28,9 @@ jobs:
       - name: Build Statistics
         run: ninja html-stats html-profile-stats -j2
         working-directory: ./build
+      - name: Render Policies (Using control files)
+        run: ninja render-policies -j2
+        working-directory: ./build
       - name: Generate HTML pages
         run: utils/generate_html_pages.sh $PAGES_DIR
         shell: bash
