--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -51,3 +51,9 @@ jobs:
           token: ${{ secrets.CONTENT_PAGES_TOKEN }}
           git-config-name: openscap-ci
           git-config-email: openscap-ci@gmail.com
+      - name: Upload artifact if the event is pull request
+        uses: actions/upload-artifact@v3
+        if: ${{ github.event_name == 'pull_request' }}
+        with:
+          name: built-content
+          path: ${{ env.PAGES_DIR }}
