SRG-APP-000390-CTR-000930 is now not applicable

--- a/controls/srg_ctr/SRG-APP-000390-CTR-000930.yml
+++ b/controls/srg_ctr/SRG-APP-000390-CTR-000930.yml
@@ -4,7 +4,7 @@ controls:
   - medium
   title: {{{ full_name }}} must require devices to reauthenticate when organization-defined
     circumstances or situations requiring reauthentication.
-  status: inherently met
+  status: not applicable
   artifact_description: |-
     Supporting evidence is in the following documentation
 
