Sync OL8 stig profile with stigids in rules
Ensure all rules in OL8 stig profile and only those have a stig id
assigned

Signed-off-by: Edgar Aguilar <edgar.aguilar@oracle.com>

--- a/linux_os/guide/system/permissions/restrictions/kernel_module_uvcvideo_disabled/rule.yml
+++ b/linux_os/guide/system/permissions/restrictions/kernel_module_uvcvideo_disabled/rule.yml
@@ -19,7 +19,7 @@ references:
     disa: CCI-000381
     nist: CM-7 (a),CM-7 (5) (b)
     srg: SRG-OS-000095-GPOS-00049,SRG-OS-000370-GPOS-00155
-    stigid@l8: OL08-00-040020
+    stigid@ol8: OL08-00-040020
     stigid@rhel8: RHEL-08-040020
 
 platform: machine
