Rename rule from chronyd_configures_time_sources to chronyd_configure_pool_and_server

--- a/linux_os/guide/services/ntp/chronyd_configure_pool_and_server/rule.yml
+++ b/linux_os/guide/services/ntp/chronyd_configure_pool_and_server/rule.yml
@@ -2,7 +2,7 @@ documentation_complete: true
 
 prodtype: sle12,sle15
 
-title: 'Chrony Configures Time Sources'
+title: 'Chrony Configure Pool and Server'
 
 description: |-
     <tt>Chrony</tt> is a daemon which implements the Network Time Protocol (NTP). It is designed to
